--- a/Day08/Packaging Exmaples/pyproject.toml
+++ b/Day08/Packaging Exmaples/pyproject.toml
@@ -3,7 +3,7 @@ requires = ['hatchling']
 build-backend = "hatchling.build"
 
 [project]
-name = "kpit-package"
+name = "kpit_package"
 version = "0.0.1"
 authors = [
   { name="Example Author", email="author@example.com" },
@@ -20,3 +20,6 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://github.com/pypa/sampleproject"
 "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/foo"]
